login more or less done

--- a/TODO
+++ b/TODO
@@ -9,5 +9,5 @@ MODULES TO DO
 - Devops complete (2 majors & 1 minor)
 
 TASKS:
-Start working with Django: Aiert & Nozomi
-Start working with Frontend & DB dessing : Victor & Larrain
+Start working with Django & DB dessing: Aiert & Nozomi
+Start working with Frontend: Victor & Larrain
