queda traducir el perfil, crear la parte de entrar al 4 players y traducir todo eso

--- a/frontend/pong-app/projects/pong/src/i18n/en.json
+++ b/frontend/pong-app/projects/pong/src/i18n/en.json
@@ -10,5 +10,35 @@
 	"home.signout": "SIGN OUT",
 	"home.signup": "SIGN UP",
 	"home.tournament": "TOURNAMENT",
-	"home.tutorial": "TUTORIAL"
+	"home.tutorial": "TUTORIAL",
+	"local.invalidname": "Invalid name",
+	"local.nameselection": "Name Selection",
+	"local.password": "Password",
+	"local.playasguest": "Play as guest",
+	"local.playasregistereduser": "Play as registered user",
+	"local.player1": "Player 1",
+	"local.player2name": "Player 2 name",
+	"local.player2type": "Player 2 type",
+	"local.playernamesmustbeunique": "Player names must be unique",
+	"local.ready": "Ready",
+	"local.username": "Username",
+	"local.verifyplayer2": "Verify Player 2",
+	"tournament.nameSelection": "Name selection",
+    "tournament.player1": "Player 1",
+    "tournament.player2": "Player 2",
+    "tournament.player3": "Player 3",
+    "tournament.player4": "Player 4",
+    "tournament.invalidName": "Invalid name",
+    "tournament.ready": "Ready",
+    "tournament.playerNamesMustBeUnique": "Player names must be unique.",
+    "tournament.resetTournament": "Reset Tournament",
+    "tournament.tournamentProgress": "Tournament Progress",
+    "tournament.semiFinals": "Semi-Finals",
+    "tournament.match": "Match",
+    "tournament.winner": "Winner",
+    "tournament.score": "Score",
+    "tournament.finals": "Finals",
+    "tournament.tournamentComplete": "Tournament Complete!",
+    "tournament.startNewTournament": "Start New Tournament",
+    "tournament.nextMatchStartingIn": "Next match starting in {{ countdownSeconds }} seconds..."
 }
