--- a/frontend/pong-app/projects/pong/src/i18n/es.json
+++ b/frontend/pong-app/projects/pong/src/i18n/es.json
@@ -10,5 +10,35 @@
 	"home.signout": "DESCONECTAR",
 	"home.signup": "REGISTRARSE",
 	"home.tournament": "TORNEO",
-	"home.tutorial": "TUTORIAL"
+	"home.tutorial": "TUTORIAL",
+	"local.invalidname": "Nombre inválido",
+	"local.nameselection": "Selección de nombre",
+	"local.password": "Contraseña",
+	"local.playasguest": "Jugar como invitado",
+	"local.playasregistereduser": "Jugar como usuario registrado",
+	"local.player1": "Jugador 1",
+	"local.player2name": "Nombre del jugador 2",
+	"local.player2type": "Tipo de jugador 2",
+	"local.playernamesmustbeunique": "Los nombres de los jugadores deben ser únicos",
+	"local.ready": "Listo",
+	"local.username": "Nombre de usuario",
+	"local.verifyplayer2": "Verificar jugador 2",
+    "tournament.nameSelection": "Selección de nombre",
+    "tournament.player1": "Jugador 1",
+    "tournament.player2": "Jugador 2",
+    "tournament.player3": "Jugador 3",
+    "tournament.player4": "Jugador 4",
+    "tournament.invalidName": "Nombre inválido",
+    "tournament.ready": "Listo",
+    "tournament.playerNamesMustBeUnique": "Los nombres de los jugadores deben ser únicos.",
+    "tournament.resetTournament": "Reiniciar Torneo",
+    "tournament.tournamentProgress": "Progreso del Torneo",
+    "tournament.semiFinals": "Semifinales",
+    "tournament.match": "Partido",
+    "tournament.winner": "Ganador",
+    "tournament.score": "Puntuación",
+    "tournament.finals": "Finales",
+    "tournament.tournamentComplete": "¡Torneo Completo!",
+    "tournament.startNewTournament": "Iniciar Nuevo Torneo",
+    "tournament.nextMatchStartingIn": "El próximo partido comienza en {{ countdownSeconds }} segundos..."
 }
