--- a/frontend/pong-app/projects/pong/src/i18n/fr.json
+++ b/frontend/pong-app/projects/pong/src/i18n/fr.json
@@ -10,5 +10,35 @@
 	"home.signout": "SE DÉCONNECTER",
 	"home.signup": "S'INSCRIRE",
 	"home.tournament": "TOURNOI",
-	"home.tutorial": "DIDACTICIEL"
+	"home.tutorial": "DIDACTICIEL",
+	"local.invalidname": "Nom invalide",
+	"local.nameselection": "Sélection du nom",
+	"local.password": "Mot de passe",
+	"local.playasguest": "Jouer en tant qu'invité",
+	"local.playasregistereduser": "Jouez en tant qu'utilisateur enregistré",
+	"local.player1": "Joueur 1",
+	"local.player2name": "Nom du joueur 2",
+	"local.player2type": "Type de joueur 2",
+	"local.playernamesmustbeunique": "Les noms des joueurs doivent être uniques",
+	"local.ready": "Prêt",
+	"local.username": "Nom d'utilisateur",
+	"local.verifyplayer2": "Vérifier le joueur 2",
+	"tournament.nameSelection": "Sélection du nom",
+    "tournament.player1": "Joueur 1",
+    "tournament.player2": "Joueur 2",
+    "tournament.player3": "Joueur 3",
+    "tournament.player4": "Joueur 4",
+    "tournament.invalidName": "Nom invalide",
+    "tournament.ready": "Prêt",
+    "tournament.playerNamesMustBeUnique": "Les noms des joueurs doivent être uniques.",
+    "tournament.resetTournament": "Réinitialiser le tournoi",
+    "tournament.tournamentProgress": "Progression du tournoi",
+    "tournament.semiFinals": "Demi-finales",
+    "tournament.match": "Match",
+    "tournament.winner": "Vainqueur",
+    "tournament.score": "Score",
+    "tournament.finals": "Finales",
+    "tournament.tournamentComplete": "Tournoi terminé!",
+    "tournament.startNewTournament": "Commencer un nouveau tournoi",
+    "tournament.nextMatchStartingIn": "Le prochain match commence dans {{ countdownSeconds }} secondes..."
 }
