--- a/frontend/pong-app/projects/pong/src/i18n/fr.json
+++ b/frontend/pong-app/projects/pong/src/i18n/fr.json
@@ -11,6 +11,7 @@
 	"home.signup": "S'INSCRIRE",
 	"home.tournament": "TOURNOI",
 	"home.tutorial": "DIDACTICIEL",
+	
 	"local.invalidname": "Nom invalide",
 	"local.nameselection": "Sélection du nom",
 	"local.password": "Mot de passe",
@@ -23,6 +24,7 @@
 	"local.ready": "Prêt",
 	"local.username": "Nom d'utilisateur",
 	"local.verifyplayer2": "Vérifier le joueur 2",
+
 	"tournament.nameSelection": "Sélection du nom",
     "tournament.player1": "Joueur 1",
     "tournament.player2": "Joueur 2",
@@ -40,5 +42,28 @@
     "tournament.finals": "Finales",
     "tournament.tournamentComplete": "Tournoi terminé!",
     "tournament.startNewTournament": "Commencer un nouveau tournoi",
-    "tournament.nextMatchStartingIn": "Le prochain match commence dans {{ countdownSeconds }} secondes..."
+    "tournament.nextMatchStartingIn": "Le prochain match commence dans secondes...",
+
+	"profile.loading": "Chargement...",
+    "profile.userAvatar": "Avatar de l'utilisateur",
+    "profile.profile": "Profil de",
+    "profile.stats": "Statistiques",
+    "profile.gamesPlayed": "Parties Jouées",
+    "profile.wins": "Victoires",
+    "profile.losses": "Défaites",
+    "profile.friends": "Amis",
+    "profile.noFriends": "Pas d'amis",
+    "profile.block": "Bloquer",
+    "profile.blockedUsers": "Utilisateurs Bloqués",
+    "profile.noBlockedUsers": "Pas d'utilisateurs bloqués",
+    "profile.unblock": "Débloquer",
+    "profile.chat": "Chat",
+    "profile.matchHistory": "Historique des Matchs",
+    "profile.findFriends": "Trouver des Amis",
+    "profile.searchUsers": "Rechercher des utilisateurs...",
+    "profile.search": "Rechercher",
+    "profile.sendFriendRequest": "Envoyer une Demande d'Amitié",
+    "profile.friendRequests": "Demandes d'Amitié",
+    "profile.accept": "Accepter",
+    "profile.decline": "Refuser"
 }
