--- a/frontend/pong-app/projects/pong/src/i18n/en.json
+++ b/frontend/pong-app/projects/pong/src/i18n/en.json
@@ -11,7 +11,6 @@
 	"home.signup": "SIGN UP",
 	"home.tournament": "TOURNAMENT",
 	"home.tutorial": "TUTORIAL",
-
 	"local.invalidname": "Invalid name",
 	"local.nameselection": "Name Selection",
 	"local.password": "Password",
@@ -24,46 +23,44 @@
 	"local.ready": "Ready",
 	"local.username": "Username",
 	"local.verifyplayer2": "Verify Player 2",
-
-	"tournament.nameSelection": "Name selection",
-    "tournament.player1": "Player 1",
-    "tournament.player2": "Player 2",
-    "tournament.player3": "Player 3",
-    "tournament.player4": "Player 4",
-    "tournament.invalidName": "Invalid name",
-    "tournament.ready": "Ready",
-    "tournament.playerNamesMustBeUnique": "Player names must be unique.",
-    "tournament.resetTournament": "Reset Tournament",
-    "tournament.tournamentProgress": "Tournament Progress",
-    "tournament.semiFinals": "Semi-Finals",
-    "tournament.match": "Match",
-    "tournament.winner": "Winner",
-    "tournament.score": "Score",
-    "tournament.finals": "Finals",
-    "tournament.tournamentComplete": "Tournament Complete!",
-    "tournament.startNewTournament": "Start New Tournament",
-    "tournament.nextMatchStartingIn": "Wait next match starting ...",
-
+	"profile.accept": "Accept",
+	"profile.block": "Block",
+	"profile.blockedUsers": "Blocked Users",
+	"profile.chat": "Chat",
+	"profile.decline": "Decline",
+	"profile.findFriends": "Find Friends",
+	"profile.friendRequests": "Friend Requests",
+	"profile.friends": "Friends",
+	"profile.gamesPlayed": "Games Played",
 	"profile.loading": "Loading...",
-    "profile.userAvatar": "User avatar",
-    "profile.profile": "Profile",
-    "profile.stats": "Stats",
-    "profile.gamesPlayed": "Games Played",
-    "profile.wins": "Wins",
-    "profile.losses": "Losses",
-    "profile.friends": "Friends",
-    "profile.noFriends": "No friends",
-    "profile.block": "Block",
-    "profile.blockedUsers": "Blocked Users",
-    "profile.noBlockedUsers": "No blocked users",
-    "profile.unblock": "Unblock",
-    "profile.chat": "Chat",
-    "profile.matchHistory": "Match History",
-    "profile.findFriends": "Find Friends",
-    "profile.searchUsers": "Search users...",
-    "profile.search": "Search",
-    "profile.sendFriendRequest": "Send Friend Request",
-    "profile.friendRequests": "Friend Requests",
-    "profile.accept": "Accept",
-    "profile.decline": "Decline"
+	"profile.losses": "Losses",
+	"profile.matchHistory": "Match History",
+	"profile.noBlockedUsers": "No blocked users",
+	"profile.noFriends": "No friends",
+	"profile.profile": "Profile",
+	"profile.search": "Search",
+	"profile.searchUsers": "Search users...",
+	"profile.sendFriendRequest": "Send Friend Request",
+	"profile.stats": "Stats",
+	"profile.unblock": "Unblock",
+	"profile.userAvatar": "User avatar",
+	"profile.wins": "Wins",
+	"tournament.finals": "Finals",
+	"tournament.invalidName": "Invalid name",
+	"tournament.match": "Match",
+	"tournament.nameSelection": "Name selection",
+	"tournament.nextMatchStartingIn": "Wait next match starting ...",
+	"tournament.player1": "Player 1",
+	"tournament.player2": "Player 2",
+	"tournament.player3": "Player 3",
+	"tournament.player4": "Player 4",
+	"tournament.playerNamesMustBeUnique": "Player names must be unique.",
+	"tournament.ready": "Ready",
+	"tournament.resetTournament": "Reset Tournament",
+	"tournament.score": "Score",
+	"tournament.semiFinals": "Semi-Finals",
+	"tournament.startNewTournament": "Start New Tournament",
+	"tournament.tournamentComplete": "Tournament Complete!",
+	"tournament.tournamentProgress": "Tournament Progress",
+	"tournament.winner": "Winner"
 }
