--- a/frontend/pong-app/projects/pong/src/i18n/es.json
+++ b/frontend/pong-app/projects/pong/src/i18n/es.json
@@ -11,7 +11,6 @@
 	"home.signup": "REGISTRARSE",
 	"home.tournament": "TORNEO",
 	"home.tutorial": "TUTORIAL",
-	
 	"local.invalidname": "Nombre inválido",
 	"local.nameselection": "Selección de nombre",
 	"local.password": "Contraseña",
@@ -24,48 +23,44 @@
 	"local.ready": "Listo",
 	"local.username": "Nombre de usuario",
 	"local.verifyplayer2": "Verificar jugador 2",
-
-    "tournament.nameSelection": "Selección de nombre",
-    "tournament.player1": "Jugador 1",
-    "tournament.player2": "Jugador 2",
-    "tournament.player3": "Jugador 3",
-    "tournament.player4": "Jugador 4",
-    "tournament.invalidName": "Nombre inválido",
-    "tournament.ready": "Listo",
-    "tournament.playerNamesMustBeUnique": "Los nombres de los jugadores deben ser únicos.",
-    "tournament.resetTournament": "Reiniciar Torneo",
-    "tournament.tournamentProgress": "Progreso del Torneo",
-    "tournament.semiFinals": "Semifinales",
-    "tournament.match": "Partido",
-    "tournament.winner": "Ganador",
-    "tournament.score": "Puntuación",
-    "tournament.finals": "Finales",
-    "tournament.tournamentComplete": "¡Torneo Completo!",
-    "tournament.startNewTournament": "Iniciar Nuevo Torneo",
-    "tournament.nextMatchStartingIn": "Espere el próximo partido comienza...",
-
+	"profile.accept": "Aceptar",
+	"profile.block": "Bloquear",
+	"profile.blockedUsers": "Usuarios Bloqueados",
+	"profile.chat": "Chat",
+	"profile.decline": "Rechazar",
+	"profile.findFriends": "Buscar Amigos",
+	"profile.friendRequests": "Solicitudes de Amistad",
+	"profile.friends": "Amigos",
+	"profile.gamesPlayed": "Juegos Jugados",
 	"profile.loading": "Cargando...",
-    "profile.userAvatar": "Avatar del usuario",
-    "profile.profile": "Perfil de",
-    "profile.stats": "Estadísticas",
-    "profile.gamesPlayed": "Juegos Jugados",
-    "profile.wins": "Victorias",
-    "profile.losses": "Derrotas",
-    "profile.friends": "Amigos",
-    "profile.noFriends": "No hay amigos",
-    "profile.block": "Bloquear",
-    "profile.blockedUsers": "Usuarios Bloqueados",
-    "profile.noBlockedUsers": "No hay usuarios bloqueados",
-    "profile.unblock": "Desbloquear",
-    "profile.chat": "Chat",
-    "profile.matchHistory": "Historial de Partidos",
-    "profile.findFriends": "Buscar Amigos",
-    "profile.searchUsers": "Buscar usuarios...",
-    "profile.search": "Buscar",
-    "profile.sendFriendRequest": "Enviar Solicitud de Amistad",
-    "profile.friendRequests": "Solicitudes de Amistad",
-    "profile.accept": "Aceptar",
-    "profile.decline": "Rechazar"
-
-
+	"profile.losses": "Derrotas",
+	"profile.matchHistory": "Historial de Partidos",
+	"profile.noBlockedUsers": "No hay usuarios bloqueados",
+	"profile.noFriends": "No hay amigos",
+	"profile.profile": "Perfil de",
+	"profile.search": "Buscar",
+	"profile.searchUsers": "Buscar usuarios...",
+	"profile.sendFriendRequest": "Enviar Solicitud de Amistad",
+	"profile.stats": "Estadísticas",
+	"profile.unblock": "Desbloquear",
+	"profile.userAvatar": "Avatar del usuario",
+	"profile.wins": "Victorias",
+	"tournament.finals": "Finales",
+	"tournament.invalidName": "Nombre inválido",
+	"tournament.match": "Partido",
+	"tournament.nameSelection": "Selección de nombre",
+	"tournament.nextMatchStartingIn": "Espere el próximo partido comienza...",
+	"tournament.player1": "Jugador 1",
+	"tournament.player2": "Jugador 2",
+	"tournament.player3": "Jugador 3",
+	"tournament.player4": "Jugador 4",
+	"tournament.playerNamesMustBeUnique": "Los nombres de los jugadores deben ser únicos.",
+	"tournament.ready": "Listo",
+	"tournament.resetTournament": "Reiniciar Torneo",
+	"tournament.score": "Puntuación",
+	"tournament.semiFinals": "Semifinales",
+	"tournament.startNewTournament": "Iniciar Nuevo Torneo",
+	"tournament.tournamentComplete": "¡Torneo Completo!",
+	"tournament.tournamentProgress": "Progreso del Torneo",
+	"tournament.winner": "Ganador"
 }
