--- a/frontend/pong-app/projects/pong/src/i18n/fr.json
+++ b/frontend/pong-app/projects/pong/src/i18n/fr.json
@@ -11,7 +11,6 @@
 	"home.signup": "S'INSCRIRE",
 	"home.tournament": "TOURNOI",
 	"home.tutorial": "DIDACTICIEL",
-	
 	"local.invalidname": "Nom invalide",
 	"local.nameselection": "Sélection du nom",
 	"local.password": "Mot de passe",
@@ -24,46 +23,44 @@
 	"local.ready": "Prêt",
 	"local.username": "Nom d'utilisateur",
 	"local.verifyplayer2": "Vérifier le joueur 2",
-
-	"tournament.nameSelection": "Sélection du nom",
-    "tournament.player1": "Joueur 1",
-    "tournament.player2": "Joueur 2",
-    "tournament.player3": "Joueur 3",
-    "tournament.player4": "Joueur 4",
-    "tournament.invalidName": "Nom invalide",
-    "tournament.ready": "Prêt",
-    "tournament.playerNamesMustBeUnique": "Les noms des joueurs doivent être uniques.",
-    "tournament.resetTournament": "Réinitialiser le tournoi",
-    "tournament.tournamentProgress": "Progression du tournoi",
-    "tournament.semiFinals": "Demi-finales",
-    "tournament.match": "Match",
-    "tournament.winner": "Vainqueur",
-    "tournament.score": "Score",
-    "tournament.finals": "Finales",
-    "tournament.tournamentComplete": "Tournoi terminé!",
-    "tournament.startNewTournament": "Commencer un nouveau tournoi",
-    "tournament.nextMatchStartingIn": "Le prochain match commence dans secondes...",
-
+	"profile.accept": "Accepter",
+	"profile.block": "Bloquer",
+	"profile.blockedUsers": "Utilisateurs Bloqués",
+	"profile.chat": "Chat",
+	"profile.decline": "Refuser",
+	"profile.findFriends": "Trouver des Amis",
+	"profile.friendRequests": "Demandes d'Amitié",
+	"profile.friends": "Amis",
+	"profile.gamesPlayed": "Parties Jouées",
 	"profile.loading": "Chargement...",
-    "profile.userAvatar": "Avatar de l'utilisateur",
-    "profile.profile": "Profil de",
-    "profile.stats": "Statistiques",
-    "profile.gamesPlayed": "Parties Jouées",
-    "profile.wins": "Victoires",
-    "profile.losses": "Défaites",
-    "profile.friends": "Amis",
-    "profile.noFriends": "Pas d'amis",
-    "profile.block": "Bloquer",
-    "profile.blockedUsers": "Utilisateurs Bloqués",
-    "profile.noBlockedUsers": "Pas d'utilisateurs bloqués",
-    "profile.unblock": "Débloquer",
-    "profile.chat": "Chat",
-    "profile.matchHistory": "Historique des Matchs",
-    "profile.findFriends": "Trouver des Amis",
-    "profile.searchUsers": "Rechercher des utilisateurs...",
-    "profile.search": "Rechercher",
-    "profile.sendFriendRequest": "Envoyer une Demande d'Amitié",
-    "profile.friendRequests": "Demandes d'Amitié",
-    "profile.accept": "Accepter",
-    "profile.decline": "Refuser"
+	"profile.losses": "Défaites",
+	"profile.matchHistory": "Historique des Matchs",
+	"profile.noBlockedUsers": "Pas d'utilisateurs bloqués",
+	"profile.noFriends": "Pas d'amis",
+	"profile.profile": "Profil de",
+	"profile.search": "Rechercher",
+	"profile.searchUsers": "Rechercher des utilisateurs...",
+	"profile.sendFriendRequest": "Envoyer une Demande d'Amitié",
+	"profile.stats": "Statistiques",
+	"profile.unblock": "Débloquer",
+	"profile.userAvatar": "Avatar de l'utilisateur",
+	"profile.wins": "Victoires",
+	"tournament.finals": "Finales",
+	"tournament.invalidName": "Nom invalide",
+	"tournament.match": "Match",
+	"tournament.nameSelection": "Sélection du nom",
+	"tournament.nextMatchStartingIn": "Le prochain match commence dans secondes...",
+	"tournament.player1": "Joueur 1",
+	"tournament.player2": "Joueur 2",
+	"tournament.player3": "Joueur 3",
+	"tournament.player4": "Joueur 4",
+	"tournament.playerNamesMustBeUnique": "Les noms des joueurs doivent être uniques.",
+	"tournament.ready": "Prêt",
+	"tournament.resetTournament": "Réinitialiser le tournoi",
+	"tournament.score": "Score",
+	"tournament.semiFinals": "Demi-finales",
+	"tournament.startNewTournament": "Commencer un nouveau tournoi",
+	"tournament.tournamentComplete": "Tournoi terminé!",
+	"tournament.tournamentProgress": "Progression du tournoi",
+	"tournament.winner": "Vainqueur"
 }
