Añadida la pagina donde los 4 players deciden si jugar registrados o no antes de entrar a jugar, falta hacer que el juego pille bien cada usuario

--- a/frontend/pong-app/projects/pong/src/i18n/en.json
+++ b/frontend/pong-app/projects/pong/src/i18n/en.json
@@ -75,5 +75,25 @@
 	"login.username": "Username",
 	"login.invalidUsername": "Invalid username",
 	"login.password": "Password",
-	"login.invalidPassword": "Invalid password"
+	"login.invalidPassword": "Invalid password",
+	"multiplayer.nameselection": "4 Players Name Selection",
+	"multiplayer.player1": "Player 1 (You)",
+	"multiplayer.player2": "Player 2",
+	"multiplayer.player3": "Player 3",
+	"multiplayer.player4": "Player 4",
+	"multiplayer.player2type": "Player 2 Type",
+	"multiplayer.player3type": "Player 3 Type",
+	"multiplayer.player4type": "Player 4 Type",
+	"multiplayer.player2name": "Player 2 Name",
+	"multiplayer.player3name": "Player 3 Name",
+	"multiplayer.player4name": "Player 4 Name",
+	"multiplayer.playasguest": "Play as Guest",
+	"multiplayer.playasregistereduser": "Play as Registered User",
+	"multiplayer.username": "Username",
+	"multiplayer.password": "Password",
+	"multiplayer.verifyplayer2": "Verify Player 2",
+	"multiplayer.verifyplayer3": "Verify Player 3",
+	"multiplayer.verifyplayer4": "Verify Player 4",
+	"multiplayer.invalidname": "Invalid name",
+	"multiplayer.ready": "Start Game"
 }
