--- a/frontend/pong-app/projects/pong/src/i18n/es.json
+++ b/frontend/pong-app/projects/pong/src/i18n/es.json
@@ -75,5 +75,25 @@
 	"login.username": "Nombre de usuario",
 	"login.invalidUsername": "Nombre de usuario inválido",
 	"login.password": "Contraseña",
-	"login.invalidPassword": "Contraseña inválida"
+	"login.invalidPassword": "Contraseña inválida",
+	"multiplayer.nameselection": "Selección de Nombres 4 Jugadores",
+	"multiplayer.player1": "Jugador 1 (Tú)",
+	"multiplayer.player2": "Jugador 2",
+	"multiplayer.player3": "Jugador 3",
+	"multiplayer.player4": "Jugador 4",
+	"multiplayer.player2type": "Tipo Jugador 2",
+	"multiplayer.player3type": "Tipo Jugador 3",
+	"multiplayer.player4type": "Tipo Jugador 4",
+	"multiplayer.player2name": "Nombre Jugador 2",
+	"multiplayer.player3name": "Nombre Jugador 3",
+	"multiplayer.player4name": "Nombre Jugador 4",
+	"multiplayer.playasguest": "Jugar como Invitado",
+	"multiplayer.playasregistereduser": "Jugar como Usuario Registrado",
+	"multiplayer.username": "Nombre de usuario",
+	"multiplayer.password": "Contraseña",
+	"multiplayer.verifyplayer2": "Verificar Jugador 2",
+	"multiplayer.verifyplayer3": "Verificar Jugador 3",
+	"multiplayer.verifyplayer4": "Verificar Jugador 4",
+	"multiplayer.invalidname": "Nombre inválido",
+	"multiplayer.ready": "Comenzar Juego"
 }
