--- a/frontend/pong-app/projects/pong/src/i18n/fr.json
+++ b/frontend/pong-app/projects/pong/src/i18n/fr.json
@@ -75,5 +75,25 @@
 	"login.username": "Nom d'utilisateur",
 	"login.invalidUsername": "Nom d'utilisateur invalide",
 	"login.password": "Mot de passe",
-	"login.invalidPassword": "Mot de passe invalide"
+	"login.invalidPassword": "Mot de passe invalide",
+	"multiplayer.nameselection": "Sélection des Noms à 4 Joueurs",
+	"multiplayer.player1": "Joueur 1 (Vous)",
+	"multiplayer.player2": "Joueur 2",
+	"multiplayer.player3": "Joueur 3",
+	"multiplayer.player4": "Joueur 4",
+	"multiplayer.player2type": "Type Joueur 2",
+	"multiplayer.player3type": "Type Joueur 3",
+	"multiplayer.player4type": "Type Joueur 4",
+	"multiplayer.player2name": "Nom Joueur 2",
+	"multiplayer.player3name": "Nom Joueur 3",
+	"multiplayer.player4name": "Nom Joueur 4",
+	"multiplayer.playasguest": "Jouer en tant qu'Invité",
+	"multiplayer.playasregistereduser": "Jouer en tant qu'Utilisateur Enregistré",
+	"multiplayer.username": "Nom d'utilisateur",
+	"multiplayer.password": "Mot de passe",
+	"multiplayer.verifyplayer2": "Vérifier Joueur 2",
+	"multiplayer.verifyplayer3": "Vérifier Joueur 3",
+	"multiplayer.verifyplayer4": "Vérifier Joueur 4",
+	"multiplayer.invalidname": "Nom invalide",
+	"multiplayer.ready": "Commencer la Partie"
 }
