--- a/frontend/pong-app/projects/pong/src/assets/i18n/fr.json
+++ b/frontend/pong-app/projects/pong/src/assets/i18n/fr.json
@@ -95,5 +95,6 @@
 	"multiplayer.verifyplayer3": "Vérifier Joueur 3",
 	"multiplayer.verifyplayer4": "Vérifier Joueur 4",
 	"multiplayer.invalidname": "Nom invalide",
-	"multiplayer.ready": "Commencer la Partie"
+	"multiplayer.ready": "Commencer la Partie",
+	"2fa.failed": "Code invalide"
 }
